objects/OAC_Transactions__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditDebit__c</fullName>
        <label>CreditDebit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>tCredit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Account_External_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Account External Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OAC Transactions</relationshipLabel>
        <relationshipName>OAC_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Bank_Account_External_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Bank Account External Id</label>
        <referenceTo>BankAccount__c</referenceTo>
        <relationshipLabel>OAC Transactions</relationshipLabel>
        <relationshipName>OAC_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ip_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ip Address</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Jcard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Jcard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jcard_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jcard Id</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jcard_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jcard Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthOfTransaction__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(Transaction_Date__c)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YearMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Account_External_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Account External Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OAC Transactions (To Account External Id)</relationshipLabel>
        <relationshipName>OAC_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>To Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>To Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Bank_Account_External_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Bank Account External Id</label>
        <referenceTo>BankAccount__c</referenceTo>
        <relationshipLabel>OAC Transactions (To Bank Account External Id)</relationshipLabel>
        <relationshipName>OAC_Transactions_To_Bank_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_date_text__c</fullName>
        <formula>TEXT(Transaction_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction date text</label>
        <type>Text</type>
    </fields>
    <label>OAC Transactions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>CreditDebit__c</columns>
        <columns>From_Account_Name__c</columns>
        <columns>From_Account_Number__c</columns>
        <columns>To_Account_Name__c</columns>
        <columns>To_Account_Number__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Transaction_date_text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>OAC Transactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAC Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>